Nicer check for project type